--- a/site/templates/homepage.html
+++ b/site/templates/homepage.html
@@ -1,7 +1,6 @@
-<!doctype html>
-<title>Linguistic Complexity of Billboard Top 100 Songs</title>
-
-<body>
+{% extends "base.html" %}
+{% block title %}Linguistic Complexity of Billboard Top 100 Songs{% endblock %}
+{% block content %}
     <h1>Welcome to the Billboard Linguistic Complexity Project</h1>
 
     <h2>This project examines the lingusitic complexity of songs that
@@ -13,15 +12,11 @@
     </h2>
 
     <h2>If you'd like to see what made it to the top 100 over the years,
-        please take a look <a href="hot100.html">here.</a> Otherwise,
-        here is the <a href="report.html">report.</a>
+        please take a look <a href=" {{ url_for('hot100') }} ">here.</a> Otherwise,
+        here is the <a href=" {{ url_for('report') }} ">report.</a>
     </h2>
 
-    <form>
-        <button type="submit" formaction="hot100.html" class="button">Hot 100</button>
-    </form>
-
-    <form>
-        <button type="submit" formaction="report.html" class="button">Report</button>
-    </form>
-</body>
+    <h2>And, if you'd like, here is the 
+        <a href="https://github.com/piresjo/Billboard-Chart-Topper-Complexity">github page.</a>
+    </h2>
+{% endblock %}
