--- a/site/templates/hot100.html
+++ b/site/templates/hot100.html
@@ -1,4 +1,5 @@
-<!doctype html>
-<title>Hot 100 Over The Years</title>
-
-<h1>Hello world</h1>
+{% extends "base.html" %}
+{% block title %}Hot 100 Over The Years{% endblock %}
+{% block content %}
+    <h1>Coming Soon</h1>
+{% endblock %}
