--- a/site/templates/report.html
+++ b/site/templates/report.html
@@ -1,4 +1,5 @@
-<!doctype html>
-<title>Report</title>
-
-<h1>Hello world</h1>
+{% extends "base.html" %}
+{% block title %}Report{% endblock %}
+{% block content %}
+    <h1>Coming Soon</h1>
+{% endblock %}
