start compiling song/artist data, create skel for hot100, fill in data to page

--- a/site/static/style.css
+++ b/site/static/style.css
@@ -54,3 +54,12 @@ body {
 .content a:visited {
     color: #05386B;
 }
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
+  th, td {
+    padding: 5px;
+    text-align: left;    
+  }
