--- a/site/templates/hot100ByLetter.html
+++ b/site/templates/hot100ByLetter.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Hot 100 Over The Years{% endblock %}
+{% block title %}Hot 100 Over The Years - All {{ starting_char }}'s {% endblock %}
 {% block content %}
     <table>
         <thead>
