revise what data we get, add new sites to site

--- a/site/static/style.css
+++ b/site/static/style.css
@@ -80,3 +80,14 @@ thead {
     color: #05386B;
     text-align: center;
 }
+
+#linkBox ul {
+    list-style-type: none;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+#linkBox li {
+    display: inline-block;
+}
